# bazelswiftproto

./: BUILD.bazel  WORKSPACE  some.proto
